# practice

./: CMakeLists.txt  README.md
c/kilo/: CMakeLists.txt  README.md  kilo.c
c/knr/: CMakeLists.txt  README.md
c/knr/src/: CMakeLists.txt
c/textcraft/: CMakeLists.txt  Makefile  README.md  getline.c
cpp/: .clang-format  CMakeLists.txt  Makefile  conanfile.txt
cpp/adt/: CMakeLists.txt  README.md
cpp/adt/src/: CMakeLists.txt  bst.cpp  bst.h  circular_buffer.cpp  circular_buffer.h  trie.cpp  trie.h  tst.cpp  tst.h
cpp/algo/: CMakeLists.txt  Makefile  README.md
cpp/algo/scripts/: build.sh
cpp/algo/src/: CMakeLists.txt  binary-search.cpp  bubblesort.cpp  bubblesort.h  change-money-dp.cpp  countsort.cpp  fibonacci.cpp  fizzbuzz.cpp  heapsort.cpp  heapsort.h  insertionsort.cpp  insertionsort.h  loggable.cpp  mergesort.cpp  mergesort.h  prima.cpp  primality.cpp  quicksort.cpp  quicksort.h  repeat.cpp  repeat2.cpp  rod-cut.cpp  same-tree.cpp  selectionsort.cpp  selectionsort.h  utils.h
cpp/ciu/: CMakeLists.txt  Makefile  README.md
cpp/ciu/scripts/: tests.sh
cpp/ciu/src/: CMakeLists.txt  linked_list.cpp  vector.cpp
cpp/conan/: clang10  clang6  clang8  clang9
cpp/dbg/: CMakeLists.txt  README.md
cpp/dbg/src/: CMakeLists.txt  breakpoint.cpp  dbg.cpp  debugger.cpp  dwarf_reader.cpp  registers.cpp  test.cpp  utils.cpp
cpp/dcp/: CMakeLists.txt  README.md
cpp/dcp/src/: CMakeLists.txt  ex.1.cpp  ex.10.cpp  ex.11.cpp  ex.12.cpp  ex.2.cpp  ex.3.cpp  ex.4.cpp  ex.5.cpp  ex.5.py  ex.6.cpp  ex.7.cpp  ex.8.cpp  ex.9.cpp
cpp/design/: CMakeLists.txt
cpp/design/src/: CMakeLists.txt  interface_adapter.cpp  select_type.cpp  static_assert.cpp
cpp/editor/: CMakeLists.txt  README.md
cpp/editor/src/: CMakeLists.txt  app.cpp  buffer.cpp  editor.cpp  frame.cpp
cpp/exceptional/: CMakeLists.txt  README.md
cpp/exceptional/src/: CMakeLists.txt  ex.1.1.cpp  ex.1.10.cpp  ex.1.11.cpp  ex.1.2.cpp  ex.1.3.cpp  ex.1.4.cpp  ex.1.5.cpp  ex.1.6.cpp  ex.1.7.cpp  ex.1.8.cpp  ex.1.9.cpp
cpp/grok/: CMakeLists.txt  README.md
cpp/grok/src/: CMakeLists.txt  bfs.cpp  binary_search.cpp  dijkstra.cpp  knapsack.cpp  set_cover_greedy.cpp
cpp/hackerrank/: CMakeLists.txt  README.md
cpp/hackerrank/src/: 2d-array-ds.cpp  CMakeLists.txt  alternating-characters.cpp  angry-children.cpp  array-manipulation.cpp  arrays-left-rotation.cpp  balanced-brackets.cpp  bst-lowest-common-ancestor.cpp  count-triplets.cpp  counting-valleys.cpp  ctci-fibonacci-numbers.cpp  ctci-linked-list-cycle.cpp  ctci-recursive-staircase.cpp  find-the-merge-point-of-two-joined-linked-lists.cpp  flipping-bits.cpp  fraudulent-activity-notifications.cpp  frequency-queries.cpp  grading.cpp  greedy-florist.cpp  hash-tables-ransom-note.cpp  insert-a-node-at-a-specific-position-in-a-linked-list.cpp  insert-a-node-into-a-sorted-doubly-linked-list.cpp  jumping-on-the-clouds.cpp  kangaroo.cpp  luck-balance.cpp  mark-and-toys.cpp  minimum-absolute-difference-in-an-array.cpp  minimum-swaps-2.cpp  new-year-chaos.cpp  recursive-digit-sum.cpp  repeated-string.cpp  reverse-a-doubly-linked-list.cpp  sherlock-and-anagrams.cpp  sherlock-and-the-valid-string.cpp  sock-merchant.cpp  sorting-bubble-sort.cpp  sorting-comparator.cpp  strings-making-anagrams.cpp  tree-height-of-a-binary-tree.cpp  trees-is-this-a-binary-search-tree.cpp  (+1 more)
cpp/idiom/: CMakeLists.txt
cpp/idiom/src/: CMakeLists.txt  badge.cpp  clonable.cpp  clonable.h  loggable.cpp
cpp/leetcode/: CMakeLists.txt  README.md
cpp/leetcode/src/: 3sum.cpp  CMakeLists.txt  add-binary.cpp  add-two-numbers.cpp  balanced-binary-tree.cpp  best-time-to-buy-and-sell-stock-ii.cpp  best-time-to-buy-and-sell-stock.cpp  binary-tree-level-order-traversal-ii.cpp  climbing-stairs.cpp  container-with-most-water.cpp  excel-sheet-column-number.cpp  generate-parentheses.cpp  happy-number.cpp  house-robber.cpp  implement-strstr.cpp  intersection-of-two-linked-lists.cpp  is-same-tree.cpp  jump-game.cpp  length-of-last-word.cpp  letter-combinations-of-a-phone-number.cpp  linked-list-cycle.cpp  longest-common-prefix.cpp  longest-palindromic-substring.cpp  longest-substring-without-repeating-characters.cpp  majority-element.cpp  maximum-depth-of-binary-tree.cpp  maximum-subarray.cpp  merge-sorted-array.cpp  merge-two-sorted-lists.cpp  min-stack.cpp  minimum-depth-of-binary-tree.cpp  number-of-1-bits.cpp  palindrome-number.cpp  pascals-triangle-ii.cpp  pascals-triangle.cpp  path-sum.cpp  plus-one.cpp  remove-duplicates-from-sorted-array.cpp  remove-element.cpp  remove-nth-node-from-end-of-list.cpp  (+14 more)
cpp/ncpp/: CMakeLists.txt
cpp/ncpp/src/: CMakeLists.txt  ncpp.cpp  ncurses.cpp  window.cpp
cpp/perf/: CMakeLists.txt
cpp/perf/src/: CMakeLists.txt  example.cpp
cpp/scripts/: build.sh
cpp/sfml/: CMakeLists.txt  main.cpp
cpp/stepik/: CMakeLists.txt
cpp/stepik/algorithms/: CMakeLists.txt  egcd.cpp  gcd.cpp
cpp/stepik/cpp1/: CMakeLists.txt  ex.2.2.10.cpp  ex.2.2.8.cpp  ex.2.3.9.cpp  ex.2.4.6.cpp  ex.2.4.7.cpp  ex.2.4.8.cpp  ex.2.6.9.cpp  ex.2.7.10.cpp  ex.2.7.9.cpp  ex.3.3.10.cpp  ex.3.3.11.cpp  ex.3.3.12.cpp  ex.3.5.7.cpp  ex.3.7.10.cpp  ex.3.7.11.cpp  ex.4.1.7.cpp  ex.4.1.9.cpp  ex.4.3.8.cpp  ex.4.5.10.cpp  ex.5.2.3.cpp  ex.5.2.4.cpp  ex.5.2.6.cpp  ex.5.2.8.cpp  ex.5.2.9.cpp  ex.5.3.3.cpp  ex.5.3.5.cpp  ex.6.1.6.cpp  ex.6.1.7.cpp  ex.6.1.8.cpp  ex.6.2.11.cpp  ex.6.2.5.cpp  ex.6.2.8.cpp  ex.6.2.9.cpp  ex.6.3.7.cpp  ex.6.4.3.cpp
cpp/stepik/cpp2/: CMakeLists.txt  ex.1.2.11.cpp  ex.1.2.5.cpp  ex.1.4.4.cpp  ex.1.4.7.cpp  ex.1.5.7.cpp  ex.1.6.10.cpp  ex.2.1.13.cpp  (+15 more)
cpp/stl/: CMakeLists.txt
cpp/stroustrup/: CMakeLists.txt  ex.4.11.2.cpp  ex.4.11.3.cpp  ex.4.11.4.cpp  ex.4.11.5.cpp  ex.5.9.1.cpp  ex.5.9.10.cpp  ex.5.9.11.cpp  ex.5.9.12.cpp  ex.5.9.3.cpp  ex.5.9.4.cpp  ex.5.9.5.cpp  ex.5.9.6.cpp  ex.5.9.7.cpp  ex.5.9.8.cpp  ex.6.6.10.cpp  ex.6.6.12.cpp  ex.6.6.13.cpp  ex.6.6.14.cpp  ex.6.6.16.cpp  ex.6.6.17.cpp  ex.6.6.18.cpp  ex.6.6.19.cpp  ex.6.6.3.cpp
cpp/timus/: CMakeLists.txt
cpp/ya/: CMakeLists.txt
py/: .gitignore  Makefile  requirements.txt  setup.cfg
py/aoc/: .pylintrc  Makefile  setup.cfg
(+148 files in other folders)
