[metadata]
name = practice
version = 1.0.0
author = Sergey Pashaev
description = Package with solutions for different exercices sources.
long_description = Package with solutions for different exercices sources.

[options]
python_requires = >=3
packages = find:
package_dir =
    = src
include-package-data = true

[options.packages.find]
where = src
include = *
exclude = tests*

[options.package_data]
practice = py.typed
