[metadata]
name = aoc
version = 1.0.0
author = Sergey Pashaev
description = Advent Of Code
long_description = Advent Of Code

[options]
python_requires = >=3
packages = find:
package_dir =
    = src
include-package-data = true

[options.packages.find]
where = src
include = aoc
exclude = tests*

[options.package_data]
aoc = py.typed
