cmake_minimum_required(VERSION 3.1..3.11)

if(${CMAKE_VERSION} VERSION_LESS 3.12)
  cmake_policy(VERSION ${CMAKE_VERSION})
endif()

function(program NAME)
  add_executable("${NAME}" "${NAME}.cpp")
  target_link_libraries("${NAME}" catch2)
  add_test(NAME "${NAME}" COMMAND "${NAME}")
endfunction()

program(heapsort)
program(mergesort)
program(bubblesort)
program(selectionsort)
program(quicksort)
program(insertionsort)
program(fibonacci)
program(change-money-dp)
